# segatools

./: Dockerfile  Package.mk  README.md  meson.build
.github/workflows/: c-cpp.yml
board/: config.c  io4.c  meson.build  sg-reader.c  sg-reader.h
carolhook/: carol-dll.c  carol-dll.h  carolhook.def  config.c  config.h  controlbd.c  controlbd.h  dllmain.c  jvs.c  meson.build
carolio/: carolio.c  carolio.h  config.c  config.h
chunihook/: config.c  dllmain.c  led1509306.c  led1509306.h  meson.build
chuniio/: chuniio.c  chuniio.h  config.c  config.h  meson.build
chusanhook/: config.c  config.h  dllmain.c  io4.c  led1509306.c
cmhook/: cm-dll.c  cm-dll.h  cmhook.def  config.c  config.h  dllmain.c  io4.c  io4.h  meson.build
cmio/: cmio.c  cmio.h  config.c  config.h  meson.build
fgohook/: config.c  config.h  dllmain.c  fgo-dll.c  fgo-dll.h  fgohook.def  io4.c  io4.h  meson.build
fgoio/: config.c  config.h  fgoio.c  fgoio.h
hooklib/: config.c  config.h  meson.build  touch.c  touch.h
mai2hook/: config.c  config.h  dllmain.c  io4.c  io4.h  mai2-dll.c  mai2-dll.h  mai2hook.def  meson.build  unity.c
mai2io/: config.c  config.h  mai2io.c  mai2io.h  meson.build
mu3hook/: config.c  config.h  dllmain.c  io4.c  mu3hook.def
mu3io/: config.c  config.h  meson.build  mu3io.c  mu3io.h
platform/: dns.c  vfs.c
